Adds AttackBehavior for all three hero types

--- a/DungeonSource/.gitignore
+++ b/DungeonSource/.gitignore
@@ -10,3 +10,11 @@
 /Warrior.class
 /HeroFactory.class
 /MonsterFactory.class
+/AttackBehavior.class
+/BaseAttackBehavior.class
+/SorceressAttackBehavior.class
+/WarriorAttackBehavior.class
+/WarriorCrushingBlowBehavior.class
+/SorceressIncreaseHitpointsBehavior.class
+/ThiefSurpriseAttackBehavior.class
+/ThiefAtttackBehavior.class
