Changed Variable Names
Changed "numTurns" variable to "numOfAttacks" and changed "namePI" in hero.java to "displayName"

--- a/DungeonSource/.gitignore
+++ b/DungeonSource/.gitignore
@@ -18,4 +18,6 @@
 /SorceressIncreaseHitpointsBehavior.class
 /ThiefSurpriseAttackBehavior.class
 /ThiefAtttackBehavior.class
+/.classpath
+/.project
 **/*.metadata
